<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_map"
        android:icon="@drawable/ic_menu_map_view"
        android:title="@string/menu_map_view" />

    <item
        android:id="@+id/navigation_list"
        android:icon="@drawable/ic_menu_list_view"
        android:title="@string/menu_list_view" />

    <item
        android:id="@+id/navigation_workmates"
        android:icon="@drawable/ic_menu_workmates"
        android:title="@string/menu_workmates" />
</menu>