<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Go4Lunch</string>
    <string name="app_desc">Find a nice restaurant and invite your coworkers to lunch</string>

    <string name="common_status_code_resolution_required">Your need to enable your GPS</string>
    <string name="location_status_code_change_unavailable">You can\'t use location services</string>
    <string name="not_implemented">This option is not implemented yet</string>

    <!-- NAVIGATION DRAWER STRINGS -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Your Lunch</string>
    <string name="menu_gallery">Settings</string>
    <string name="menu_slideshow">Logout</string>
    <string name="profile_content_description">Profile thumbnail</string>
    <string name="image_nav_view_content_description">Logo</string>
    <string name="info_no_email_found">No email found</string>
    <string name="info_no_username_found">No user name found</string>
    <string name="no_restaurant_picked">You haven\'t picked any restaurant yet.</string>

    <!-- BOTTOM NAVIGATION VIEW STRINGS -->
    <string name="menu_map_view">Map View</string>
    <string name="menu_list_view">List View</string>
    <string name="menu_workmates">Workmates</string>
    <string name="menu_chat">Chat</string>

    <string name="search_restaurants">Search restaurants</string>
    <string name="search_workmates">Search workmates</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_yourlunch">Your Lunch</string>
    <string name="title_main">I\'m Hungry !</string>

    <!-- LOGIN STRINGS -->
    <string name="google_signIn">Sign in with Google</string>
    <string name="facebook_signIn">Sign in with Facebook</string>
    <string name="twitter_signIn">Sign in with Twitter</string>
    <string name="email_signIn">Sign in with e-Mail</string>
    <string name="background_image_desc">Background image</string>
    <string name="connexion_canceled">Connexion canceled</string>
    <string name="connexion_successful">Connexion successful</string>
    <string name="connexion_no_network">No Internet connexion</string>
    <string name="connexion_provider_error">Provider error</string>
    <string name="connexion_unknown_error">Unknown error</string>

    <string name="location_permission_denied">Location permission denied</string>
    <string name="permission_required_toast">Permission required</string>
    <string name="permission_rationale_location">Permission rationale</string>
    <string name="error_unknown_error">Unknown error</string>

    <!-- RESTAURANT VIEW STRINGS -->
    <string name="restaurant_call">CALL</string>
    <string name="restaurant_like">LIKE</string>
    <string name="restaurant_website">WEBSITE</string>
    <string name="restaurant_background_image_description">Restaurant picture</string>
    <string name="no_website_found">No website found for this restaurant</string>
    <string name="nb_of_participants">(%1$d)</string>

    <!-- WORKMATES -->
    <string name="user_is_eating_here">%1$s is eating %2$s</string>
    <string name="user_hasnt_decided_yet">%1$s hasn\'t decided yet</string>
    <string name="user_is_joining">%1$s is joining !</string>

    <!-- UTILITY STRINGS -->
    <string name="closed">Closed</string>
    <string name="always_open">Open 24/7</string>
    <string name="open_until">Open until</string>
    <string name="closes_soon">Closes soon</string>
    <string name="open_now">Open now</string>
    <string name="opening_time_unavailable">Opening time unavailable</string>

    <!-- ALERT DIALOGS -->
    <string name="positive_button">Yes</string>
    <string name="negative_button">No</string>
    <string name="alert_dialog_title">Exit</string>
    <string name="alert_dialog_message">Are you sure want to quit the application ?</string>
    <string name="delete_account">Are you sure to delete your account ? This can\'t be undone.</string>
    <string name="delete_account_title">Delete account</string>

    <!-- SETTINGS STRINGS -->
    <string name="language">Language of the application</string>
    <string-array name="languages_array">
        <item>English</item>
        <item>French</item>
    </string-array>
    <string name="your_name">Your Name</string>
    <string name="btn_save">SAVE</string>
    <string name="btn_delete_account">DELETE ACCOUNT</string>
    <string name="notification_enabled">Enable notifications</string>
    <string name="changes_saved">Changes saved!</string>
    <string name="notifs_enabled">Notifications enabled</string>
    <string name="notifs_disabled">Notifications disabled</string>
    <string name="no_image">No image selected</string>

    <!-- NOTIFICATIONS STRINGS -->
    <string name="notif_no_choice">You haven\'t picked any restaurant yet</string>
    <string name="notif_your_lunch">Your lunch at: </string>
    <string name="notif_with">with: </string>
    <string name="notif_nobody">Nobody joined yet</string>

    <!-- OTHERS -->
    <string name="cannot_get_location">Cannot get current location for now</string>
</resources>
