...
                <FrameLayout
                    android:id="@+id/content_frame"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/bottom_navigation_view"
                    app:layout_constraintTop_toBottomOf="@id/toolbar">

                </FrameLayout>

                <!-- BOTTOM NAVIGATION VIEW -->
                <com.google.android.material.bottomnavigation.BottomNavigationView
...
