...
        app:layout_constraintBottom_toBottomOf="@+id/background_layout"
        android:layout_marginLeft="@dimen/margin_sides"
        android:layout_marginRight="@dimen/margin_sides"
        android:layout_marginBottom="@dimen/margin_bottom">

        <Button
            android:id="@+id/google_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:background="@drawable/custom_google_button"
            android:layout_gravity="center"
            android:gravity="center"
...
